--- a/planning/lanelet2_mission_planner/package.xml
+++ b/planning/lanelet2_mission_planner/package.xml
@@ -7,10 +7,13 @@
   <maintainer email="121974220+hgangwar@users.noreply.github.com">beliv</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <depend>lanelet2_extension</depend>
+  <depend>rclcpp</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
