--- a/planning/mpc_planner/CMakeLists.txt
+++ b/planning/mpc_planner/CMakeLists.txt
@@ -7,9 +7,28 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(lanelet2_extension REQUIRED)
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(pluginlib REQUIRED)
+find_package(mpc++ CONFIG REQUIRED)
+find_package(libmpc_plugin REQUIRED)
+
+include_directories(include)
+include_directories(${mpc++_INCLUDE_DIRS})
+
+add_executable(mpc_planner src/mpc_planner.cpp
+                            src/mpc_planner_node.cpp)
+
+install(TARGETS mpc_planner
+DESTINATION lib/${PROJECT_NAME})
+
+ament_target_dependencies(mpc_planner rclcpp geometry_msgs autoware_planning_msgs 
+                tf2_ros tf2 tf2_geometry_msgs lanelet2_extension libmpc_plugin)
+
+target_link_libraries(${PROJECT_NAME} Eigen3::Eigen mpc++ libmpc_plugin::libmpc_plugin)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
