--- a/planning/mpc_planner/package.xml
+++ b/planning/mpc_planner/package.xml
@@ -8,6 +8,11 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>mpc++</depend>
+  <depend>rclcpp</depend>
+  <depend>autoware_planning_msgs</depend>
+  <depend>autoware_auto_mapping_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
