--- a/planning/mpc_planner/CMakeLists.txt
+++ b/planning/mpc_planner/CMakeLists.txt
@@ -12,12 +12,12 @@ find_package(tf2 REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(lanelet2_extension REQUIRED)
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(mpc_plugin REQUIRED)
 find_package(pluginlib REQUIRED)
-find_package(mpc++ CONFIG REQUIRED)
-find_package(libmpc_plugin REQUIRED)
+#find_package(mpc++ CONFIG REQUIRED)
 
 include_directories(include)
-include_directories(${mpc++_INCLUDE_DIRS})
+#include_directories(${mpc++_INCLUDE_DIRS})
 
 add_executable(mpc_planner src/mpc_planner.cpp
                             src/mpc_planner_node.cpp)
@@ -26,9 +26,14 @@ install(TARGETS mpc_planner
 DESTINATION lib/${PROJECT_NAME})
 
 ament_target_dependencies(mpc_planner rclcpp geometry_msgs autoware_planning_msgs 
-                tf2_ros tf2 tf2_geometry_msgs lanelet2_extension libmpc_plugin)
+                tf2_ros tf2 tf2_geometry_msgs lanelet2_extension mpc_plugin pluginlib)
 
-target_link_libraries(${PROJECT_NAME} Eigen3::Eigen mpc++ libmpc_plugin::libmpc_plugin)
+install(
+  DIRECTORY include/
+  DESTINATION include
+)
+
+target_link_libraries(${PROJECT_NAME} Eigen3::Eigen)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -40,5 +45,7 @@ if(BUILD_TESTING)
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+ament_export_include_directories(include)
 
 ament_package()
