--- a/planning/mpc_planner/CMakeLists.txt
+++ b/planning/mpc_planner/CMakeLists.txt
@@ -19,21 +19,63 @@ find_package(mpc++ CONFIG REQUIRED)
 include_directories(include)
 include_directories(${mpc++_INCLUDE_DIRS})
 
+# Acados
+set(acados_include "/home/rohan/tools/acados/include")
+set(acados_lib "/home/rohan/tools/acados/lib")
+set(full_model_build ${PROJECT_SOURCE_DIR}/scripts/c_generated_code)
+
+include_directories(
+            ${full_model_build}
+            ${acados_include}
+            ${acados_include}/blasfeo/include/
+            ${acados_include}/hpipm/include/
+            ${acados_include}/acados/
+            ${acados_include}/qpOASES_e/
+)
+
+link_directories(${full_model_build})
+
 add_executable(mpc_planner src/mpc_planner.cpp
                             src/mpc_planner_node.cpp)
+
+add_executable(mpc_planner_acados src/mpc_planner_acados.cpp
+                                  src/mpc_planner_acados_node.cpp)    
+                                  
+                                  
 
 install(TARGETS mpc_planner
 DESTINATION lib/${PROJECT_NAME})
 
+install(TARGETS mpc_planner_acados
+DESTINATION lib/${PROJECT_NAME})
+
 ament_target_dependencies(mpc_planner rclcpp geometry_msgs autoware_planning_msgs 
                 tf2_ros tf2 tf2_geometry_msgs lanelet2_extension mpc_plugin pluginlib)
+
+ament_target_dependencies(mpc_planner_acados rclcpp geometry_msgs autoware_planning_msgs 
+                tf2_ros tf2 tf2_geometry_msgs lanelet2_extension)                
 
 install(
   DIRECTORY include/
   DESTINATION include
 )
 
+install(DIRECTORY scripts/c_generated_code/
+    DESTINATION include/${PROJECT_NAME}/${CUR_DIRECTORY_NAME}/
+    FILES_MATCHING PATTERN "*.h")
+
+
+install(DIRECTORY scripts/c_generated_code/
+    DESTINATION lib 
+    FILES_MATCHING PATTERN "*.so")
+
+
 target_link_libraries(${PROJECT_NAME} Eigen3::Eigen mpc++)
+
+target_link_libraries(mpc_planner_acados 
+                    ${full_model_build}/libacados_ocp_solver_nmpc_planner.so
+                    ${acados_lib}/libacados.so
+) 
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
