Added nmpc kinematic controller

--- a/control/nmpc_path_tracker/scripts/kinematic/c_generated_code/Makefile
+++ b/control/nmpc_path_tracker/scripts/kinematic/c_generated_code/Makefile
@@ -36,28 +36,28 @@
 
 # model
 MODEL_SRC=
-MODEL_SRC+= nmpc_planner_steer_model/nmpc_planner_steer_expl_ode_fun.c
-MODEL_SRC+= nmpc_planner_steer_model/nmpc_planner_steer_expl_vde_forw.c
-MODEL_SRC+= nmpc_planner_steer_model/nmpc_planner_steer_expl_vde_adj.c
+MODEL_SRC+= nmpc_kinematic_controller_model/nmpc_kinematic_controller_expl_ode_fun.c
+MODEL_SRC+= nmpc_kinematic_controller_model/nmpc_kinematic_controller_expl_vde_forw.c
+MODEL_SRC+= nmpc_kinematic_controller_model/nmpc_kinematic_controller_expl_vde_adj.c
 MODEL_OBJ := $(MODEL_SRC:.c=.o)
 
 # optimal control problem - mostly CasADi exports
 OCP_SRC=
 
-OCP_SRC+= acados_solver_nmpc_planner_steer.c
+OCP_SRC+= acados_solver_nmpc_kinematic_controller.c
 OCP_OBJ := $(OCP_SRC:.c=.o)
 
 # for sim solver
-SIM_SRC= acados_sim_solver_nmpc_planner_steer.c
+SIM_SRC= acados_sim_solver_nmpc_kinematic_controller.c
 SIM_OBJ := $(SIM_SRC:.c=.o)
 
 # for target example
-EX_SRC= main_nmpc_planner_steer.c
+EX_SRC= main_nmpc_kinematic_controller.c
 EX_OBJ := $(EX_SRC:.c=.o)
 EX_EXE := $(EX_SRC:.c=)
 
 # for target example_sim
-EX_SIM_SRC= main_sim_nmpc_planner_steer.c
+EX_SIM_SRC= main_sim_nmpc_kinematic_controller.c
 EX_SIM_OBJ := $(EX_SIM_SRC:.c=.o)
 EX_SIM_EXE := $(EX_SIM_SRC:.c=)
 
@@ -96,8 +96,8 @@ LDLIBS+= -lm
 LDLIBS+= 
 
 # libraries
-LIBACADOS_SOLVER=libacados_solver_nmpc_planner_steer.so
-LIBACADOS_OCP_SOLVER=libacados_ocp_solver_nmpc_planner_steer.so
+LIBACADOS_SOLVER=libacados_solver_nmpc_kinematic_controller.so
+LIBACADOS_OCP_SOLVER=libacados_ocp_solver_nmpc_kinematic_controller.so
 LIBACADOS_SIM_SOLVER=lib$(SIM_SRC:.c=.so)
 
 # virtual targets
@@ -132,7 +132,7 @@ ocp_cython_c: ocp_shared_lib
 	-o acados_ocp_solver_pyx.c \
 	-I $(INCLUDE_PATH)/../interfaces/acados_template/acados_template \
 	$(INCLUDE_PATH)/../interfaces/acados_template/acados_template/acados_ocp_solver_pyx.pyx \
-	-I /home/rohan/SimplyAutonomous/src/SimplyAutonomous_stack/planning/mpc_planner/scripts/acados_steer/c_generated_code \
+	-I /home/rohan/SimplyAutonomous/src/SimplyAutonomous_stack/control/nmpc_path_tracker/scripts/kinematic/c_generated_code \
 
 ocp_cython_o: ocp_cython_c
 	$(CC) $(ACADOS_FLAGS) -c -O2 \
@@ -150,7 +150,7 @@ ocp_cython: ocp_cython_o
 	-o acados_ocp_solver_pyx.so \
 	-Wl,-rpath=$(LIB_PATH) \
 	acados_ocp_solver_pyx.o \
-	$(abspath .)/libacados_ocp_solver_nmpc_planner_steer.so \
+	$(abspath .)/libacados_ocp_solver_nmpc_kinematic_controller.so \
 	$(LDFLAGS) $(LDLIBS)
 
 # Sim Cython targets
@@ -159,7 +159,7 @@ sim_cython_c: sim_shared_lib
 	-o acados_sim_solver_pyx.c \
 	-I $(INCLUDE_PATH)/../interfaces/acados_template/acados_template \
 	$(INCLUDE_PATH)/../interfaces/acados_template/acados_template/acados_sim_solver_pyx.pyx \
-	-I /home/rohan/SimplyAutonomous/src/SimplyAutonomous_stack/planning/mpc_planner/scripts/acados_steer/c_generated_code \
+	-I /home/rohan/SimplyAutonomous/src/SimplyAutonomous_stack/control/nmpc_path_tracker/scripts/kinematic/c_generated_code \
 
 sim_cython_o: sim_cython_c
 	$(CC) $(ACADOS_FLAGS) -c -O2 \
@@ -177,7 +177,7 @@ sim_cython: sim_cython_o
 	-o acados_sim_solver_pyx.so \
 	-Wl,-rpath=$(LIB_PATH) \
 	acados_sim_solver_pyx.o \
-	$(abspath .)/libacados_sim_solver_nmpc_planner_steer.so \
+	$(abspath .)/libacados_sim_solver_nmpc_kinematic_controller.so \
 	$(LDFLAGS) $(LDLIBS)
 
 clean:
@@ -190,13 +190,13 @@ clean_ocp_shared_lib:
 	$(RM) $(OCP_OBJ)
 
 clean_ocp_cython:
-	$(RM) libacados_ocp_solver_nmpc_planner_steer.so
-	$(RM) acados_solver_nmpc_planner_steer.o
+	$(RM) libacados_ocp_solver_nmpc_kinematic_controller.so
+	$(RM) acados_solver_nmpc_kinematic_controller.o
 	$(RM) acados_ocp_solver_pyx.so
 	$(RM) acados_ocp_solver_pyx.o
 
 clean_sim_cython:
-	$(RM) libacados_sim_solver_nmpc_planner_steer.so
-	$(RM) acados_sim_solver_nmpc_planner_steer.o
+	$(RM) libacados_sim_solver_nmpc_kinematic_controller.so
+	$(RM) acados_sim_solver_nmpc_kinematic_controller.o
 	$(RM) acados_sim_solver_pyx.so
 	$(RM) acados_sim_solver_pyx.o
