Added a kinematic controller based on acados and fixed the mpc planner

--- a/control/nmpc_path_tracker/CMakeLists.txt
+++ b/control/nmpc_path_tracker/CMakeLists.txt
@@ -7,9 +7,58 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(autoware_planning_msgs REQUIRED)
+find_package(autoware_control_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
+
+include_directories(include)
+
+# Acados
+set(acados_include "/home/rohan/tools/acados/include")
+set(acados_lib "/home/rohan/tools/acados/lib")
+set(kinematic_model_build ${PROJECT_SOURCE_DIR}/scripts/kinematic/c_generated_code)
+
+include_directories(
+            ${kinematic_model_build}
+            ${acados_include}
+            ${acados_include}/blasfeo/include/
+            ${acados_include}/hpipm/include/
+            ${acados_include}/acados/
+            ${acados_include}/qpOASES_e/
+)
+
+link_directories(${kinematic_model_build})
+
+add_executable(nmpc_controller_kinematic src/kinematic/nmpc_controller.cpp
+                            src/kinematic/nmpc_controller_node.cpp)                                
+                                  
+install(TARGETS nmpc_controller_kinematic
+DESTINATION lib/${PROJECT_NAME})
+
+ament_target_dependencies(nmpc_controller_kinematic rclcpp autoware_planning_msgs 
+                tf2 autoware_control_msgs visualization_msgs tf2_geometry_msgs)               
+
+install(
+  DIRECTORY include/
+  DESTINATION include
+)
+
+install(DIRECTORY scripts/kinematic/c_generated_code/
+    DESTINATION include/${PROJECT_NAME}/${CUR_DIRECTORY_NAME}/
+    FILES_MATCHING PATTERN "*.h")
+
+
+install(DIRECTORY scripts/kinematic/c_generated_code/
+    DESTINATION lib 
+    FILES_MATCHING PATTERN "*.so")   
+
+target_link_libraries(nmpc_controller_kinematic 
+                    ${kinematic_model_build}/libacados_ocp_solver_nmpc_kinematic_controller.so
+                    ${acados_lib}/libacados.so
+) 
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
