--- a/control/nmpc_path_tracker/package.xml
+++ b/control/nmpc_path_tracker/package.xml
@@ -12,6 +12,9 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <depend>autoware_planning_msgs</depend>
+  <depend>autoware_control_msgs</depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
