--- a/launch/sensing_launch/sensing_launch/package.xml
+++ b/launch/sensing_launch/sensing_launch/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>pointcloud_preprocessor_gpu</name>
+  <name>sensing_launch</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="rohanNkhaire@gmail.com">rohan</maintainer>
@@ -11,9 +11,7 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  <depend>pcl_ros</depend>
-  <depend>libpcl-dev</depend>
-  <depend>tf2_geometry_msgs</depend>
+  <depend>pointclud_prerocessor_gpu</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
